@@ -1,3 +1,9 @@
+2018-03-26  Jason Merrill  <jason@redhat.com>
+
+	PR c++/85049 - ICE with __integer_pack.
+	* pt.c (unify_pack_expansion): Don't try to deduce generated packs.
+	* cp-tree.h (TEMPLATE_PARM_P): New.
+
 2018-03-23  Jason Merrill  <jason@redhat.com>
 
 	PR c++/78489 - wrong SFINAE behavior.
